<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/todo_view_item_completed"
            android:layout_toLeftOf="@+id/todo_view_item_completed" >
            <TextView
                android:id="@+id/todo_view_item_todo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_view_item_todo_name_tag"/>

            <TextView
                android:id="@+id/todo_view_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:minLines="1"
                android:maxLines="5"
                android:text="@string/todo_view_item_todo_description_tag" />

            <TextView
                android:id="@+id/todo_view_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="2"
                android:minLines="1"
                android:maxLines="5"
                android:text="@string/todo_view_item_todo_date_tag" />
        </LinearLayout>

        <CheckBox android:id="@+id/todo_view_item_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />


        <RelativeLayout
            android:layout_below="@id/group_1"
            android:id="@+id/group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/todo_view_item_todo_completed_date_tag"/>
            <TextView
                android:gravity="end"
                android:id="@+id/todo_view_item_completed_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/date_format_placeholder" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>