<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:text="@string/nothing_to_show"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/view_todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/remaining_btn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:enabled="false"
                    android:text="@string/remaining"/>
                <Button
                    android:id="@+id/completed_btn"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text="@string/completed"/>
            </LinearLayout>
            <TextView
                android:id="@+id/selected_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textAlignment="center"
                android:text="@string/remaining_list"
                android:gravity="center_horizontal" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_todo_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/todo_view_item" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/view_add_edit_todo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_edit_24"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>