<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp">

    <LinearLayout
        android:id="@+id/confirm_dialog_message_area"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/confirm_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/confirm_dialog_message"
            android:layout_marginRight="10dp" />
        <ViewStub
            android:id="@+id/layout_stub"
            android:inflatedId="@+id/message_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/confirm_dialog_negative_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/teal_200"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:text="@string/confirm_dialog_negative_btn_tag"
            android:textSize="15sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/confirm_dialog_positive_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:layout_weight="1"
            android:paddingVertical="20dp"
            android:text="@string/confirm_dialog_positive_btn_tag"
            android:textSize="15sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>